--- a/index.html
+++ b/index.html
@@ -60,14 +60,44 @@
       <!-- Banner -->
       <section id="banner">
         <header>
-          <h2>Hi. You're looking at <strong>Helios</strong>.</h2>
-          <p>
-            A (free) responsive site template by
-            <a href="http://html5up.net">HTML5 UP</a>. Built with HTML5/CSS3 and
-            released under the
-            <a href="http://html5up.net/license">CCA</a> license.
-          </p>
+          <h2>
+            👋 Hi, I'm <strong>Chen</strong>. a physics student at
+            <strong>Imperial College London</strong>.
+          </h2>
         </header>
+        <p>
+          My given name is "晨" (Chen), meaning "morning" in Chinese.
+          Interestingly, "Chen" also sounds like "cheng", which is the Chinese
+          pronunciation for "orange" (橙). Because of this, my friends
+          affectionately call me "橙子" (chengzi, orange) 🍊.
+        </p>
+        <p>
+          At Imperial College London, I focus on experimental work with
+          <strong>semiconductor qubits</strong> under the guidance of Dr. John
+          Michniewicz. Meanwhile, I'm a remote intern at the
+          <a href="http://en.baqis.ac.cn/"
+            >Beijing Academy of Quantum Information Sciences (BAQIS)</a
+          >, where I work with Dr. Jingbo Wang on
+          <strong>Rydberg atom quantum computing and compilation</strong>.
+        </p>
+        <p>
+          Theoretical research brings me the joy of creating new ideas, while
+          experimental work excites me as I witness "physics happening in the
+          lab." I am deeply passionate about both aspects of my research and
+          enjoy the unique challenges and rewards each offers.
+        </p>
+        <p>
+          I am passionate about exploring the fascinating realms of Quantum
+          Computing and Quantum Information. Outside of academics, I enjoy
+          photography, traveling, reading, and learning new things.
+        </p>
+        <p>
+          I am always on the lookout for new opportunities to expand my
+          knowledge and skills. Whether through collaborative projects,
+          internships, or further academic research, I'm eager to connect with
+          like-minded individuals and organizations. If you're interested in my
+          research or potential collaboration, please feel free to reach out! 📧
+        </p>
       </section>
 
       <!-- Carousel -->
