--- a/index.html
+++ b/index.html
@@ -52,7 +52,10 @@
             </li>
             <li><a href="publications.html">Publications</a></li>
             <li><a href="notes.html"></a>Notes</li>
-            <li><a href="no-sidebar.html">No Sidebar</a></li>
+            <li><a href="#">Life</a>
+            <ul>
+              <li><a href="photography.html">Photography</a></li>
+            </li>
           </ul>
         </nav>
       </div>
