--- a/index.html
+++ b/index.html
@@ -60,51 +60,6 @@
         </nav>
       </div>
 
-      <!-- Banner -->
-      <section id="banner">
-        <header>
-          <h2>
-            👋 Hi, I'm <strong>Chen</strong>. a physics student at
-            <strong>Imperial College London</strong>.
-          </h2>
-        </header>
-        <p>
-          My given name is "晨" (Chen), meaning "morning" in Chinese.
-          Interestingly, "Chen" also sounds like "cheng", which is the Chinese
-          pronunciation for "orange" (橙). Because of this, my friends
-          affectionately call me "橙子" (chengzi, orange) 🍊.
-        </p>
-        <p>
-          At Imperial College London, I focus on experimental work with
-          <strong>semiconductor qubits</strong> under the guidance of Dr. John
-          Michniewicz. Meanwhile, I'm a remote intern at the
-          <a href="http://en.baqis.ac.cn/"
-            >Beijing Academy of Quantum Information Sciences (BAQIS)</a
-          >, where I work with Dr. Jingbo Wang on
-          <strong>Rydberg atom quantum computing and compilation</strong>.
-        </p>
-        <p>
-          Theoretical research brings me the joy of creating new ideas, while
-          experimental work excites me as I witness "physics happening in the
-          lab." I am deeply passionate about both aspects of my research and
-          enjoy the unique challenges and rewards each offers.
-        </p>
-        <p>
-          I am passionate about exploring the fascinating realms of Quantum
-          Computing and Quantum Information. Outside of academics, I enjoy
-          photography, traveling, reading, and learning new things.
-        </p>
-        <p>
-          I am always on the lookout for new opportunities to expand my
-          knowledge and skills. Whether through collaborative projects,
-          internships, or further academic research, I'm eager to connect with
-          like-minded individuals and organizations. If you're interested in my
-          research or potential collaboration, please feel free to reach out! 📧
-        </p>
-      </section>
-
- 
-
       <!-- Main -->
       <div class="wrapper style2">
         <article id="main" class="container special">
@@ -112,30 +67,42 @@
             ><img src="images/pic06.jpg" alt=""
           /></a>
           <header>
-            <h2><a href="#">Sed massa imperdiet magnis</a></h2>
-            <p>
-              Sociis aenean eu aenean mollis mollis facilisis primis ornare
-              penatibus aenean. Cursus ac enim pulvinar curabitur morbi
-              convallis. Lectus malesuada sed fermentum dolore amet.
-            </p>
+            <h2>👋 Hi, I'm <strong>Chen</strong>. a physics student at
+              <strong>Imperial College London</strong>.</h2>
           </header>
           <p>
-            Commodo id natoque malesuada sollicitudin elit suscipit. Curae
-            suspendisse mauris posuere accumsan massa posuere lacus convallis
-            tellus interdum. Amet nullam fringilla nibh nulla convallis ut
-            venenatis purus sit arcu sociis. Nunc fermentum adipiscing tempor
-            cursus nascetur adipiscing adipiscing. Primis aliquam mus lacinia
-            lobortis phasellus suscipit. Fermentum lobortis non tristique ante
-            proin sociis accumsan lobortis. Auctor etiam porttitor phasellus
-            tempus cubilia ultrices tempor sagittis. Nisl fermentum consequat
-            integer interdum integer purus sapien. Nibh eleifend nulla nascetur
-            pharetra commodo mi augue interdum tellus. Ornare cursus augue
-            feugiat sodales velit lorem. Semper elementum ullamcorper lacinia
-            natoque aenean scelerisque.
+            My given name is "晨" (Chen), meaning "morning" in Chinese.
+            Interestingly, "Chen" also sounds like "cheng", which is the Chinese
+            pronunciation for "orange" (橙). Because of this, my friends
+            affectionately call me "橙子" (chengzi, orange) 🍊.
           </p>
-          <footer>
-            <a href="#" class="button">Continue Reading</a>
-          </footer>
+          <p>
+            At Imperial College London, I focus on experimental work with
+            <strong>semiconductor qubits</strong> under the guidance of Dr. John
+            Michniewicz. Meanwhile, I'm a remote intern at the
+            <a href="http://en.baqis.ac.cn/"
+              >Beijing Academy of Quantum Information Sciences (BAQIS)</a
+            >, where I work with Dr. Jingbo Wang on
+            <strong>Rydberg atom quantum computing and compilation</strong>.
+          </p>
+          <p>
+            Theoretical research brings me the joy of creating new ideas, while
+            experimental work excites me as I witness "physics happening in the
+            lab." I am deeply passionate about both aspects of my research and
+            enjoy the unique challenges and rewards each offers.
+          </p>
+          <p>
+            I am passionate about exploring the fascinating realms of Quantum
+            Computing and Quantum Information. Outside of academics, I enjoy
+            photography, traveling, reading, and learning new things.
+          </p>
+          <p>
+            I am always on the lookout for new opportunities to expand my
+            knowledge and skills. Whether through collaborative projects,
+            internships, or further academic research, I'm eager to connect with
+            like-minded individuals and organizations. If you're interested in my
+            research or potential collaboration, please feel free to reach out! 📧
+          </p>
         </article>
       </div>
 
@@ -143,11 +110,10 @@
       <div class="wrapper style1">
         <section id="features" class="container special">
           <header>
-            <h2>Morbi ullamcorper et varius leo lacus</h2>
+            <h2>Research Interests</h2>
             <p>
-              Ipsum volutpat consectetur orci metus consequat imperdiet duis
-              integer semper magna.
-            </p>
+              I am passionate about exploring the fascinating realms of Quantum
+              Computing and Quantum Information. 
           </header>
           <div class="row">
             <article class="col-4 col-12-mobile special">
@@ -155,42 +121,24 @@
                 ><img src="images/pic07.jpg" alt=""
               /></a>
               <header>
-                <h3><a href="#">Gravida aliquam penatibus</a></h3>
+                <h3><a href="#">Quantum Compilation</a></h3>
               </header>
-              <p>
-                Amet nullam fringilla nibh nulla convallis tique ante proin
-                sociis accumsan lobortis. Auctor etiam porttitor phasellus
-                tempus cubilia ultrices tempor sagittis. Nisl fermentum
-                consequat integer interdum.
-              </p>
             </article>
             <article class="col-4 col-12-mobile special">
               <a href="#" class="image featured"
                 ><img src="images/pic08.jpg" alt=""
               /></a>
               <header>
-                <h3><a href="#">Sed quis rhoncus placerat</a></h3>
+                <h3><a href="#">Quantum Error Correction</a></h3>
               </header>
-              <p>
-                Amet nullam fringilla nibh nulla convallis tique ante proin
-                sociis accumsan lobortis. Auctor etiam porttitor phasellus
-                tempus cubilia ultrices tempor sagittis. Nisl fermentum
-                consequat integer interdum.
-              </p>
             </article>
             <article class="col-4 col-12-mobile special">
               <a href="#" class="image featured"
                 ><img src="images/pic09.jpg" alt=""
               /></a>
               <header>
-                <h3><a href="#">Magna laoreet et aliquam</a></h3>
+                <h3><a href="#">Quantum + AI</a></h3>
               </header>
-              <p>
-                Amet nullam fringilla nibh nulla convallis tique ante proin
-                sociis accumsan lobortis. Auctor etiam porttitor phasellus
-                tempus cubilia ultrices tempor sagittis. Nisl fermentum
-                consequat integer interdum.
-              </p>
             </article>
           </div>
         </section>
@@ -200,140 +148,12 @@
       <div id="footer">
         <div class="container">
           <div class="row">
-            <!-- Tweets -->
-            <section class="col-4 col-12-mobile">
-              <header>
-                <h2 class="icon brands fa-twitter circled">
-                  <span class="label">Tweets</span>
-                </h2>
-              </header>
-              <ul class="divided">
-                <li>
-                  <article class="tweet">
-                    Amet nullam fringilla nibh nulla convallis tique ante sociis
-                    accumsan.
-                    <span class="timestamp">5 minutes ago</span>
-                  </article>
-                </li>
-                <li>
-                  <article class="tweet">
-                    Hendrerit rutrum quisque.
-                    <span class="timestamp">30 minutes ago</span>
-                  </article>
-                </li>
-                <li>
-                  <article class="tweet">
-                    Curabitur donec nulla massa laoreet nibh. Lorem praesent
-                    montes.
-                    <span class="timestamp">3 hours ago</span>
-                  </article>
-                </li>
-                <li>
-                  <article class="tweet">
-                    Lacus natoque cras rhoncus curae dignissim ultricies.
-                    Convallis orci aliquet.
-                    <span class="timestamp">5 hours ago</span>
-                  </article>
-                </li>
-              </ul>
-            </section>
-
-            <!-- Posts -->
-            <section class="col-4 col-12-mobile">
-              <header>
-                <h2 class="icon solid fa-file circled">
-                  <span class="label">Posts</span>
-                </h2>
-              </header>
-              <ul class="divided">
-                <li>
-                  <article class="post stub">
-                    <header>
-                      <h3><a href="#">Nisl fermentum integer</a></h3>
-                    </header>
-                    <span class="timestamp">3 hours ago</span>
-                  </article>
-                </li>
-                <li>
-                  <article class="post stub">
-                    <header>
-                      <h3><a href="#">Phasellus portitor lorem</a></h3>
-                    </header>
-                    <span class="timestamp">6 hours ago</span>
-                  </article>
-                </li>
-                <li>
-                  <article class="post stub">
-                    <header>
-                      <h3><a href="#">Magna tempus consequat</a></h3>
-                    </header>
-                    <span class="timestamp">Yesterday</span>
-                  </article>
-                </li>
-                <li>
-                  <article class="post stub">
-                    <header>
-                      <h3><a href="#">Feugiat lorem ipsum</a></h3>
-                    </header>
-                    <span class="timestamp">2 days ago</span>
-                  </article>
-                </li>
-              </ul>
-            </section>
-
-            <!-- Photos -->
-            <section class="col-4 col-12-mobile">
-              <header>
-                <h2 class="icon solid fa-camera circled">
-                  <span class="label">Photos</span>
-                </h2>
-              </header>
-              <div class="row gtr-25">
-                <div class="col-6">
-                  <a href="#" class="image fit"
-                    ><img src="images/pic10.jpg" alt=""
-                  /></a>
-                </div>
-                <div class="col-6">
-                  <a href="#" class="image fit"
-                    ><img src="images/pic11.jpg" alt=""
-                  /></a>
-                </div>
-                <div class="col-6">
-                  <a href="#" class="image fit"
-                    ><img src="images/pic12.jpg" alt=""
-                  /></a>
-                </div>
-                <div class="col-6">
-                  <a href="#" class="image fit"
-                    ><img src="images/pic13.jpg" alt=""
-                  /></a>
-                </div>
-                <div class="col-6">
-                  <a href="#" class="image fit"
-                    ><img src="images/pic14.jpg" alt=""
-                  /></a>
-                </div>
-                <div class="col-6">
-                  <a href="#" class="image fit"
-                    ><img src="images/pic15.jpg" alt=""
-                  /></a>
-                </div>
-              </div>
-            </section>
-          </div>
-          <hr />
-          <div class="row">
             <div class="col-12">
               <!-- Contact -->
               <section class="contact">
                 <header>
                   <h3>Nisl turpis nascetur interdum?</h3>
                 </header>
-                <p>
-                  Urna nisl non quis interdum mus ornare ridiculus egestas
-                  ridiculus lobortis vivamus tempor aliquet.
-                </p>
                 <ul class="icons">
                   <li>
                     <a href="#" class="icon brands fa-twitter"
@@ -356,12 +176,12 @@
                     >
                   </li>
                   <li>
-                    <a href="#" class="icon brands fa-dribbble"
-                      ><span class="label">Dribbble</span></a
+                    <a href="https://www.zhihu.com/people/huang-chen-54-4" class="icon brands fa-zhihu"
+                      ><span class="label">Zhihu</span></a
                     >
                   </li>
                   <li>
-                    <a href="#" class="icon brands fa-linkedin-in"
+                    <a href="https://www.linkedin.com/in/chen-huang-820x/" class="icon brands fa-linkedin-in"
                       ><span class="label">Linkedin</span></a
                     >
                   </li>
