--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
               <a href="#">Research</a>
               <ul>
                 <li>
-                  <a href="rydberg-quantum-compilation"
+                  <a href="rydberg-quantum-compilation.html"
                     >Rydberg quantum compilation</a
                   >
                 </li>
