--- a/publications.html
+++ b/publications.html
@@ -70,9 +70,9 @@
               </header>
               <ul>
                 <li>
-                  <b>C. Huang</b>, X. Zhao, H. Xu, W. Zhuang, M.-J. Hu, D. E.
-                  Liu, and J. Wang, "ZAP: Zoned Architecture and Parallelizable
-                  Compiler for Field Programmable Atom Array,"
+                  <strong>C. Huang</strong>, X. Zhao, H. Xu, W. Zhuang, M.-J.
+                  Hu, D. E. Liu, and J. Wang, "ZAP: Zoned Architecture and
+                  Parallelizable Compiler for Field Programmable Atom Array,"
                   <i
                     >arXiv preprint
                     <a href="https://arxiv.org/abs/2411.14037"
@@ -84,6 +84,51 @@
             </section>
           </article>
           <hr />
+          <article id="main" class="special">
+            <header>
+              <h2><a href="#">Patents</a></h2>
+            </header>
+            <section>
+              <header>
+                <h3>2024</h3>
+              </header>
+              <ul>
+                <li>
+                  J. Wang and <strong>C. Huang</strong>, "Ion trap chip
+                  parameter determining method and device, electronic equipment
+                  and medium,"
+                  <i
+                    >Chinese Patent
+                    <a href="https://patents.google.com/patent/CN117371547/en"
+                      >CN117371547</a
+                    ></i
+                  >, Granted 2023.
+                </li>
+                <li>
+                  J. Wang and <strong>C. Huang</strong>, "Ion trap chip
+                  parameter determining method and device, electronic equipment
+                  and medium,"
+                  <i
+                    >Chinese Patent
+                    <a href="https://patents.google.com/patent/CN117454997/en"
+                      >CN117454997</a
+                    ></i
+                  >, 2023.
+                </li>
+                <li>
+                  <strong>C. Huang</strong> and J. Wang, "Ion trap chip
+                  parameter calibration method and device, electronic equipment
+                  and medium,"
+                  <i
+                    >Chinese Patent
+                    <a href="https://patents.google.com/patent/CN117494829/en"
+                      >CN117494829</a
+                    ></i
+                  >, 2023.
+                </li>
+              </ul>
+            </section>
+          </article>
         </div>
       </div>
 
