--- a/publications.html
+++ b/publications.html
@@ -60,9 +60,9 @@
       <!-- Main -->
       <div class="wrapper style1">
         <div class="container">
-          <article id="main" class="special">
+          <article id="publications" class="special">
             <header>
-              <h2><a href="#">Publications</a></h2>
+              <h2><a href="#publications">Publications</a></h2>
             </header>
             <section>
               <header>
@@ -84,9 +84,9 @@
             </section>
           </article>
           <hr />
-          <article id="main" class="special">
+          <article id="patents" class="special">
             <header>
-              <h2><a href="#">Patents</a></h2>
+              <h2><a href="#patents">Patents</a></h2>
             </header>
             <section>
               <header>
