--- a/publications.html
+++ b/publications.html
@@ -62,7 +62,7 @@
         <div class="container">
           <article id="publications" class="special">
             <header>
-              <h2><a href="#publications">Publications</a></h2>
+              <h2><a href="#publications" class="scrolly">Publications</a></h2>
             </header>
             <section>
               <header>
@@ -86,7 +86,7 @@
           <hr />
           <article id="patents" class="special">
             <header>
-              <h2><a href="#patents">Patents</a></h2>
+              <h2><a href="#patents" class="scrolly">Patents</a></h2>
             </header>
             <section>
               <header>
