--- a/index.html
+++ b/index.html
@@ -67,8 +67,9 @@
             ><img src="images/pic06.jpg" alt=""
           /></a>
           <header>
-            <h2>👋 Hi, I'm <strong>Chen</strong>. a physics student at
-              <strong>Imperial College London</strong>.</h2>
+            <h2>👋 Hi, I'm <strong>Chen</strong>, </h2>
+            <p>a physics student at
+              <strong>Imperial College London</strong>.</p>
           </header>
           <p>
             My given name is "晨" (Chen), meaning "morning" in Chinese.
