--- a/index.html
+++ b/index.html
@@ -26,6 +26,28 @@
         <div class="inner">
           <header>
             <h1><a href="index.html" id="logo">Chen Huang / 黄晨</a></h1>
+              <ul class="icons">
+                <li>
+                  <a href="mailto:chen.huang23@imperial.ac.uk" class="icon brands fa-envelope"
+                    ><span class="label">Email</span></a
+                  >
+                </li>
+                <li>
+                  <a href="https://github.com/chenx820" class="icon brands fa-github"
+                    ><span class="label">GitHub</span></a
+                  >
+                </li>
+                <li>
+                  <a href="https://www.zhihu.com/people/huang-chen-54-4" class="icon brands fa-zhihu"
+                    ><span class="label">Zhihu</span></a
+                  >
+                </li>
+                <li>
+                  <a href="https://www.linkedin.com/in/chen-huang-820x/" class="icon brands fa-linkedin-in"
+                    ><span class="label">Linkedin</span></a
+                  >
+                </li>
+              </ul>
             <hr />
             <p>Welcome to Chen's Physics World!</p>
           </header>
