--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <h1><a href="index.html" id="logo">Chen Huang / 黄晨</a></h1>
               <ul class="icons">
                 <li>
-                  <a href="mailto:chen.huang23@imperial.ac.uk" class="icon brands fa-envelope"
+                  <a href="mailto:chen.huang23@imperial.ac.uk" class="icon fa-envelope"
                     ><span class="label">Email</span></a
                   >
                 </li>
@@ -179,7 +179,7 @@
                 </header>
                 <ul class="icons">
                   <li>
-                    <a href="mailto:chen.huang23@imperial.ac.uk" class="icon brands fa-envelope"
+                    <a href="mailto:chen.huang23@imperial.ac.uk" class="icon fa-envelope"
                       ><span class="label">Email</span></a
                     >
                   </li>
