--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <p>Welcome to Chen's Physics World!</p>
           </header>
           <footer>
-            <a href="#banner" class="button scrolly">Start</a>
+            <a href="#main" class="button scrolly">Start</a>
           </footer>
         </div>
 
@@ -83,8 +83,12 @@
         </nav>
       </div>
 
+
+
+
       <!-- Main -->
       <div class="wrapper style2">
+        <div class="container">
         <article id="main" class="container special">
           <header>
             <h2>👋 Hi, I'm <strong>Chen</strong>, </h2>
@@ -126,6 +130,7 @@
           </p>
         </article>
       </div>
+    </div>
 
       <!-- Features -->
       <div class="wrapper style1">
