--- a/photography.html
+++ b/photography.html
@@ -6,8 +6,9 @@
 -->
 <html>
   <head>
-    <title>No Sidebar - Helios by HTML5 UP</title>
+    <title>Chen's Physics World</title>
     <meta charset="utf-8" />
+    <link rel="icon" href="images/icon.png" type="image/png" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, user-scalable=no"
@@ -24,38 +25,35 @@
         <!-- Inner -->
         <div class="inner">
           <header>
-            <h1><a href="index.html" id="logo">Helios</a></h1>
+            <h1>Life is more than Physics</h1>
           </header>
         </div>
 
         <!-- Nav -->
         <nav id="nav">
-          <ul>
-            <li><a href="index.html">Home</a></li>
-            <li>
-              <a href="#">Dropdown</a>
-              <ul>
-                <li><a href="#">Lorem ipsum dolor</a></li>
-                <li><a href="#">Magna phasellus</a></li>
-                <li><a href="#">Etiam dolore nisl</a></li>
-                <li>
-                  <a href="#">And a submenu &hellip;</a>
-                  <ul>
-                    <li><a href="#">Lorem ipsum dolor</a></li>
-                    <li><a href="#">Phasellus consequat</a></li>
-                    <li><a href="#">Magna phasellus</a></li>
-                    <li><a href="#">Etiam dolore nisl</a></li>
-                  </ul>
-                </li>
-                <li><a href="#">Veroeros feugiat</a></li>
-              </ul>
-            </li>
-            <li><a href="left-sidebar.html">Left Sidebar</a></li>
-            <li><a href="right-sidebar.html">Right Sidebar</a></li>
-            <li><a href="no-sidebar.html">No Sidebar</a></li>
-          </ul>
-        </nav>
-      </div>
+			<ul>
+			  <li><a href="index.html">Home</a></li>
+			  <li>
+				<a href="#">Research</a>
+				<ul>
+				  <li>
+					<a href="rydberg-quantum-compilation.html"
+					  >Rydberg quantum compilation</a
+					>
+				  </li>
+				  <li><a href="#">Trapped-ion quantum computing</a></li>
+				  <li><a href="#">Charge noise in semiconductor qubits</a></li>
+				</ul>
+			  </li>
+			  <li><a href="publications.html">Publications</a></li>
+			  <li><a href="notes.html"></a>Notes</li>
+			  <li><a href="#">Life</a>
+			  <ul>
+				<li><a href="photography.html">Photography</a></li>
+			  </li>
+			</ul>
+		  </nav>
+		</div>
 
       <!-- Carousel -->
       <section class="carousel">
