--- a/rydberg-quantum-compilation.html
+++ b/rydberg-quantum-compilation.html
@@ -169,10 +169,7 @@
           <div class="row">
             <div class="col-12">
               <!-- Contact -->
-              <section class="contact">
-                <header>
-                  <h3>Nisl turpis nascetur interdum?</h3>
-                </header>
+              <section class="contact">\
                 <ul class="icons">
                   <li>
                     <a
