--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
               </ul>
             </li>
             <li><a href="publications.html">Publications</a></li>
-            <li><a href="notes.html"></a>Notes</li>
+            <li><a href="notes.html">Notes</a></li>
             <li><a href="#">Life</a>
             <ul>
               <li><a href="photography.html">Photography</a></li>
