--- a/notes.html
+++ b/notes.html
@@ -25,7 +25,7 @@
         <!-- Inner -->
         <div class="inner">
           <header>
-            <h1><a href="index.html" id="logo">Helios</a></h1>
+            <h1><a href="index.html" id="logo">Chen's Physics World</a></h1>
           </header>
         </div>
 
@@ -46,7 +46,7 @@
 				</ul>
 			  </li>
 			  <li><a href="publications.html">Publications</a></li>
-			  <li><a href="notes.html"></a>Notes</li>
+			  <li><a href="notes.html">Notes</a></li>
 			  <li><a href="#">Life</a>
 			  <ul>
 				<li><a href="photography.html">Photography</a></li>
