--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <!-- Inner -->
         <div class="inner">
           <header>
-            <h1><a href="index.html" id="logo">Chen Huang / 黄晨</a></h1>
+            <h1>Chen Huang / 黄晨</h1>
             <br><br>
               <ul class="icons">
                 <li>
@@ -85,8 +85,8 @@
 
 
       <!-- Main -->
-      <div class="wrapper style1">
-        <article id="main" class="container special">
+      <div id="main" class="wrapper style1">
+        <article class="container special">
           <header>
             <h2>👋 Hi, I'm <strong>Chen</strong>, </h2>
             <p>a physics student at
