--- a/notes.html
+++ b/notes.html
@@ -178,6 +178,7 @@
 				<section>
 					<header>
 					  <h3>Huazhong University of Science and Technology 2018-2022</h3>
+					  <p>This collection includes notes from my undergraduate studies, primarily written in Chinese. They cover a mix of topics, ranging from class lectures to self-directed learning. For clarity, I've added labels to indicate the source of each note.</p>
 					</header>
 					<p>
 						<ul>
