--- a/index.html
+++ b/index.html
@@ -95,13 +95,15 @@
           <div class="row gtr-200"><div class="col-4 col-12-mobile" id="sidebar">
             <hr class="first" />
             <section>
+              <a href="#" class="image fit"><img src="images/photo.jpg" alt="" /></a>
               <header>
-                <h3><a href="#">Accumsan sed penatibus</a></h3>
+                <h3><a href="#">这里写什么合适？</a></h3>
               </header>
               <p>
-                Dolor sed fringilla nibh nulla convallis tique ante proin sociis accumsan lobortis. Auctor etiam
-                porttitor phasellus tempus cubilia ultrices tempor sagittis  tellus ante diam nec penatibus dolor cras
-                magna tempus feugiat veroeros.
+                My given name is "晨" (Chen), meaning "morning" in Chinese.
+                Interestingly, "Chen" also sounds like "cheng", which is the Chinese
+                pronunciation for "orange" (橙). Because of this, my friends
+                affectionately call me "橙子" (chengzi, orange) 🍊.
               </p>
               <footer>
                 <a href="#" class="button">Learn More</a>
@@ -214,12 +216,7 @@
               </section>
             </article>
           </div></div>
-          <p>
-            My given name is "晨" (Chen), meaning "morning" in Chinese.
-            Interestingly, "Chen" also sounds like "cheng", which is the Chinese
-            pronunciation for "orange" (橙). Because of this, my friends
-            affectionately call me "橙子" (chengzi, orange) 🍊.
-          </p>
+          
           <p>
             At Imperial College London, I focus on experimental work with
             <strong>semiconductor qubits</strong> under the guidance of Dr. John
