--- a/index.html
+++ b/index.html
@@ -95,9 +95,10 @@
           <div class="row gtr-200"><div class="col-4 col-12-mobile" id="sidebar">
             <hr class="first" />
             <section>
-              <a href="#" class="image fit"><img src="images/photo.jpg" alt="" /></a>
               <header>
-                <h3><a href="#">这里写什么合适？</a></h3>
+                <img src="images/photo.jpg" alt="" />
+                <br><br>
+                <h3><a href="#">About me</a></h3>
               </header>
               <p>
                 My given name is "晨" (Chen), meaning "morning" in Chinese.
