--- a/index.html
+++ b/index.html
@@ -95,9 +95,12 @@
           <div class="row gtr-200"><div class="col-4 col-12-mobile" id="sidebar">
             <hr class="first" />
             <section>
+              <div class="row gtr-50">
+                <div class="col-8">
+                  <a href="" class="image fit"><img src="images/photo.jpg" alt="" /></a>
+                </div>
+              </div>
               <header>
-                <img src="images/photo.jpg" alt="" />
-                <br><br>
                 <h3><a href="#">About me</a></h3>
               </header>
               <p>
