--- a/index.html
+++ b/index.html
@@ -96,10 +96,9 @@
             <hr class="first" />
             <section>
               <div class="row gtr-50">
-                <div class="col-8">
-                  <a href="" class="image fit"><img src="images/photo.jpg" alt="" /></a>
-                </div>
+                  <img src="images/photo.jpg" alt="image fit" />
               </div>
+              <br><br>
               <header>
                 <h3><a href="#">About me</a></h3>
               </header>
