--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             <hr class="first" />
             <section>
               <div class="row gtr-50">
-                  <img src="images/photo.jpg" alt="image fit" />
+                <a class="image fit"><img src="images/photo.jpg" alt="" /></a>
               </div>
               <br><br>
               <header>
@@ -175,9 +175,9 @@
           <div class="col-8 col-12-mobile imp-mobile" id="content">
             <article id="main">
               <header>
-                <h2><a href="#">Left Sidebar</a></h2>
+                <h2><a href="#">Education</a></h2>
                 <p>
-                  Morbi convallis lectus malesuada sed fermentum dolore amet
+                  <strong>University of Science and Technology (HUST)</strong> 
                 </p>
               </header>
               <a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
