--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
               </p>
               <div class="row gtr-50">
                 <div class="col-4">
-                  <a href="#" class="image fit"><img src="images/pic10.jpg" alt="" /></a>
+                  <a href="#" class="image centered"><img src="images/pic10.jpg" alt="" /></a>
                 </div>
                 <div class="col-8">
                   <h4>Nibh sed cubilia</h4>
@@ -175,12 +175,11 @@
           <div class="col-8 col-12-mobile imp-mobile" id="content">
             <article id="main">
               <header>
-                <h2><a href="#">Education</a></h2>
-                <p>
-                  <strong>University of Science and Technology (HUST)</strong> 
-                </p>
+                <h3><a href="#">Education</a></h3>
               </header>
-              <a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
+              <p>
+                <strong>University of Science and Technology (HUST)</strong> 
+              </p>
               <p>
                 Commodo id natoque malesuada sollicitudin elit suscipit. Curae suspendisse mauris posuere accumsan massa
                 posuere lacus convallis tellus interdum. Amet nullam fringilla nibh nulla convallis ut venenatis purus
