--- a/index.html
+++ b/index.html
@@ -173,21 +173,16 @@
             </section>
           </div>
           <div class="col-8 col-12-mobile imp-mobile" id="content">
-            <article id="main">
+            <article>
+              <section>
               <header>
-                <h3><a href="#">Education</a></h3>
+                <h3>Education</h3>
               </header>
               <p>
-                <strong>University of Science and Technology (HUST)</strong> 
+                <ul><strong>Imperial College London</strong></ul>
+                <ul><strong></strong>University of Science and Technology (HUST)</strong></ul>
               </p>
-              <p>
-                Commodo id natoque malesuada sollicitudin elit suscipit. Curae suspendisse mauris posuere accumsan massa
-                posuere lacus convallis tellus interdum. Amet nullam fringilla nibh nulla convallis ut venenatis purus
-                lobortis. Auctor etiam porttitor phasellus tempus cubilia ultrices tempor sagittis. Nisl fermentum
-                consequat integer interdum integer purus sapien. Nibh eleifend nulla nascetur pharetra commodo mi augue
-                interdum tellus. Ornare cursus augue feugiat sodales velit lorem. Semper elementum ullamcorper lacinia
-                natoque aenean scelerisque vel lacinia mollis quam sodales congue.
-              </p>
+            </section>
               <section>
                 <header>
                   <h3>Ultrices tempor sagittis nisl</h3>
