--- a/index.html
+++ b/index.html
@@ -179,13 +179,13 @@
                 <h3>Education</h3>
               </header>
               <p>
-                <ul><strong>Imperial College London</strong></ul>
-                <ul><strong></strong>University of Science and Technology (HUST)</strong></ul>
+                <ul><strong>Imperial College London</strong><br>M.Sc. in Physics with extended research, advised by Dr. John Michniewicz</ul>
+                <ul><strong></strong>University of Science and Technology (HUST)</strong><br>B.S. in Physics, advised by Prof. Jianming Cai</ul>
               </p>
             </section>
               <section>
                 <header>
-                  <h3>Ultrices tempor sagittis nisl</h3>
+                  <h3>Research experience</h3>
                 </header>
                 <p>
                   Nascetur volutpat nibh ullamcorper vivamus at purus. Cursus ultrices porttitor sollicitudin imperdiet
