--- a/index.html
+++ b/index.html
@@ -179,8 +179,10 @@
                 <h3>Education</h3>
               </header>
               <p>
-                <ul><strong>Imperial College London</strong><br>M.Sc. in Physics with extended research, advised by Dr. John Michniewicz</ul>
-                <ul><strong></strong>University of Science and Technology (HUST)</strong><br>B.S. in Physics, advised by Prof. Jianming Cai</ul>
+                <ul>
+                  <li><strong>Imperial College London</strong><br>M.Sc. in Physics with extended research, advised by Dr. John Michniewicz</li>
+                  <li><strong></strong>University of Science and Technology (HUST)</strong><br>B.S. in Physics, advised by Prof. Jianming Cai</li>
+                </ul>
               </p>
             </section>
               <section>
