--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
               <p>
                 <ul>
                   <li><strong>Imperial College London</strong><br>M.Sc. in Physics with extended research, advised by Dr. John Michniewicz</li>
-                  <li><strong></strong>University of Science and Technology (HUST)</strong><br>B.S. in Physics, advised by Prof. Jianming Cai</li>
+                  <li><strong>Huazhong University of Science and Technology (HUST)</strong><br>B.S. in Physics, advised by Prof. Jianming Cai</li>
                 </ul>
               </p>
             </section>
