--- a/index.html
+++ b/index.html
@@ -180,37 +180,54 @@
               </header>
               <p>
                 <ul>
-                  <li><strong>Imperial College London</strong><br>M.Sc. in Physics with extended research, advised by Dr. John Michniewicz</li>
-                  <li><strong>Huazhong University of Science and Technology (HUST)</strong><br>B.S. in Physics, advised by Prof. Jianming Cai</li>
+                  <li><strong>Imperial College London</strong><br>
+                    M.Sc. in Physics with extended research, advised by Dr. John Michniewicz<br>
+                    Sep. 2023 -- Sep. 2025 (Expected)</li>
+                  <li><strong>Huazhong University of Science and Technology (HUST)</strong><br>
+                    B.S. in Physics, advised by Prof. Jianming Cai<br>
+                    Sep. 2018 -- Jun. 2022</li>
                 </ul>
               </p>
-            </section>
+              </section>
               <section>
                 <header>
                   <h3>Research experience</h3>
                 </header>
                 <p>
-                  Nascetur volutpat nibh ullamcorper vivamus at purus. Cursus ultrices porttitor sollicitudin imperdiet
-                  at pretium tellus in euismod a integer sodales neque. Nibh quis dui quis mattis eget imperdiet venenatis
-                  feugiat. Neque primis ligula cum erat aenean tristique luctus risus ipsum praesent iaculis. Fermentum elit
-                  fringilla consequat dis arcu. Pellentesque mus tempor vitae pretium sodales porttitor lacus. Phasellus
-                  egestas odio nisl duis sociis purus faucibus morbi. Eget massa mus etiam sociis pharetra magna.
+                  <strong>Quantum Optics and Laser Science (QOLS) Group, Imperial College London</strong><br>
+                  <i>MSc student, advised by Dr. John Michniewicz</i><br>
+                  <i>Jun. 2024 -- Present</i>
                 </p>
                 <p>
-                  Eleifend auctor turpis magnis sed porta nisl pretium. Aenean suspendisse nulla eget sed etiam parturient
-                  orci cursus nibh. Quisque eu nec neque felis laoreet diam morbi egestas. Dignissim cras rutrum consectetur
-                  ut penatibus fermentum nibh erat malesuada varius.
+                  <strong>Beijing Academy of Quantum Information Sciences (BAQIS)</strong><br>
+                  <i>Research intern (remote), advised by Dr. Jingbo Wang</i><br>
+                  <i>May 2024 -- Present</i>
                 </p>
               </section>
               <section>
                 <header>
-                  <h3>Augue euismod feugiat tempus</h3>
+                  <h3>Awards and Honors</h3>
                 </header>
                 <p>
-                  Pretium tellus in euismod a integer sodales neque. Nibh quis dui quis mattis eget imperdiet venenatis
-                  feugiat. Neque primis ligula cum erat aenean tristique luctus risus ipsum praesent iaculis. Fermentum elit
-                  ut nunc urna volutpat donec cubilia commodo risus morbi. Lobortis vestibulum velit malesuada ante
-                  egestas odio nisl duis sociis purus faucibus morbi. Eget massa mus etiam sociis pharetra magna.
+                  <ul>
+                    <li><strong>Outstanding Intern</strong>, Baidu, Inc., 2023.</li>
+                    <li><strong>Outstanding Graduate</strong>, HUST, 2022.</li>
+                    <li><strong>UCAS Scholarship</strong>, University of Chinese Academy of Sciences, 2020.</li>
+                    <li><strong>Yan Ji-ci Scholarship</strong>, Institute of Physics, Chinese Academy of Sciences, 2020.</li>
+                    <li><strong>Outstanding Undergraduate in terms of Academic Performance</strong>, HUST, 2019.<br>
+                      <i>Highest honor for undergraduates at HUST, awarded to top 1%.</i></li>
+                    <li><strong>National Scholarship</strong>, Ministry of Education of China, 2019 <br>
+                      <i>Highest honor for university students in China, awarded to top 0.2% nationwide.</i></li>
+                  </ul>
+                </p>
+              </section>
+              <section>
+                <header>
+                  <h3>Leadership</h3>
+                </header>
+                <p>
+                  <strong>Innovative Base of Physics Experiments (IBPE), HUST</strong><br>
+                    <i>Chairperson</i>
                 </p>
               </section>
             </article>
