--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
           </div>
           <div class="col-8 col-12-mobile imp-mobile" id="content">
             <article>
-              <section>
+              <section id="education">
               <header>
                 <h3>Education</h3>
               </header>
@@ -182,42 +182,42 @@
                 <ul>
                   <li><strong>Imperial College London</strong><br>
                     M.Sc. in Physics with extended research, advised by Dr. John Michniewicz<br>
-                    Sep. 2023 -- Sep. 2025 (Expected)</li>
+                    Sep. 2023 - Sep. 2025 (Expected)</li>
                   <li><strong>Huazhong University of Science and Technology (HUST)</strong><br>
                     B.S. in Physics, advised by Prof. Jianming Cai<br>
-                    Sep. 2018 -- Jun. 2022</li>
+                    Sep. 2018 - Jun. 2022</li>
                 </ul>
               </p>
               </section>
-              <section>
+              <section id="research">
                 <header>
                   <h3>Research experience</h3>
                 </header>
                 <p>
                   <strong>Quantum Optics and Laser Science (QOLS) Group, Imperial College London</strong><br>
-                  <i>MSc student, advised by Dr. John Michniewicz</i><br>
-                  <i>Jun. 2024 -- Present</i>
+                  <i>M.Sc. student, advised by Dr. John Michniewicz</i><br>
+                  <i>Jun. 2024 - Present</i>
                 </p>
                 <p>
                   <strong>Beijing Academy of Quantum Information Sciences (BAQIS)</strong><br>
                   <i>Research intern (remote), advised by Dr. Jingbo Wang</i><br>
-                  <i>May 2024 -- Present</i>
+                  <i>May 2024 - Present</i>
                 </p>
               </section>
-              <section>
+              <section id="awards">
                 <header>
                   <h3>Awards and Honors</h3>
                 </header>
                 <p>
                   <ul>
-                    <li><strong>Outstanding Intern</strong>, Baidu, Inc., 2023.</li>
-                    <li><strong>Outstanding Graduate</strong>, HUST, 2022.</li>
+                    <li><strong>Outstanding Intern</strong>, Baidu, Inc., 2023</li>
+                    <li><strong>Outstanding Graduate</strong>, HUST, 2022</li>
                     <li><strong>UCAS Scholarship</strong>, University of Chinese Academy of Sciences, 2020.</li>
-                    <li><strong>Yan Ji-ci Scholarship</strong>, Institute of Physics, Chinese Academy of Sciences, 2020.</li>
-                    <li><strong>Outstanding Undergraduate in terms of Academic Performance</strong>, HUST, 2019.<br>
-                      <i>Highest honor for undergraduates at HUST, awarded to top 1%.</i></li>
-                    <li><strong>National Scholarship</strong>, Ministry of Education of China, 2019 <br>
-                      <i>Highest honor for university students in China, awarded to top 0.2% nationwide.</i></li>
+                    <li><strong>Yan Ji-ci Scholarship</strong>, Institute of Physics, Chinese Academy of Sciences, 2020</li>
+                    <li><strong>Outstanding Undergraduate in terms of Academic Performance</strong>, HUST, 2019<br>
+                      <i>*Highest honor for undergraduates at HUST, awarded to top 1%.</i></li>
+                    <li><strong>National Scholarship</strong>, Ministry of Education of China, 2019<br>
+                      <i>*Highest honor for university students in China, awarded to top 0.2% nationwide.</i></li>
                   </ul>
                 </p>
               </section>
