--- a/index.html
+++ b/index.html
@@ -189,6 +189,7 @@
                 </ul>
               </p>
               </section>
+              <hr />
               <section id="research">
                 <header>
                   <h3>Research experience</h3>
@@ -204,6 +205,7 @@
                   <i>May 2024 - Present</i>
                 </p>
               </section>
+              <hr />
               <section id="awards">
                 <header>
                   <h3>Awards and Honors</h3>
@@ -221,7 +223,8 @@
                   </ul>
                 </p>
               </section>
-              <section>
+              <hr />
+              <section id="leadership">
                 <header>
                   <h3>Leadership</h3>
                 </header>
