--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 affectionately call me "橙子" (chengzi, orange) 🍊.
               </p>
               <footer>
-                <a href="#" class="button">Learn More</a>
+                <a href="#" class="button">Full CV</a>
               </footer>
             </section>
             <hr />
@@ -176,7 +176,7 @@
             <article>
               <section id="education">
               <header>
-                <h3>Education</h3>
+                <h2>Education</h2>
               </header>
               <p>
                 <ul>
