--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
             <article>
               <section id="education">
               <header>
-                <h2>Education</h2>
+                <h3>Education</h3>
               </header>
               <p>
                 <ul>
@@ -200,10 +200,14 @@
                   <i>Jun. 2024 - Present</i>
                 </p>
                 <p>
-                  <strong>Beijing Academy of Quantum Information Sciences (BAQIS)</strong><br>
+                  <strong><a href="http://en.baqis.ac.cn/research/groups/?cid=814">Quantum Operating System Group</a>, Beijing Academy of Quantum Information Sciences (BAQIS)</strong><br>
                   <i>Research intern (remote), advised by Dr. Jingbo Wang</i><br>
                   <i>May 2024 - Present</i>
                 </p>
+                <p>
+                  <strong>Institute for Quantum Computing, Baidu, Inc.</strong><br>
+                  <i>Research intern, advised by Dr. Jingbo Wang</i><br>
+                  <i>Mar. 2023 - Sep. 2023</i>
               </section>
               <hr />
               <section id="awards">
