--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                   <h3>Research experience</h3>
                 </header>
                 <p>
-                  <strong>Quantum Optics and Laser Science (QOLS) Group, Imperial College London</strong><br>
+                  <strong><a href="https://www.imperial.ac.uk/a-z-research/quantum-optics-and-laser-science/">Quantum Optics and Laser Science (QOLS) Group</a>, Imperial College London</strong><br>
                   <i>M.Sc. student, advised by Dr. John Michniewicz</i><br>
                   <i>Jun. 2024 - Present</i>
                 </p>
@@ -205,7 +205,7 @@
                   <i>May 2024 - Present</i>
                 </p>
                 <p>
-                  <strong>Institute for Quantum Computing, Baidu, Inc.</strong><br>
+                  <strong><a href="https://research.baidu.com/Research_Areas/index-view?id=75">Institute for Quantum Computing</a>, Baidu, Inc.</strong><br>
                   <i>Research intern, advised by Dr. Jingbo Wang</i><br>
                   <i>Mar. 2023 - Sep. 2023</i>
               </section>
