--- a/index.html
+++ b/index.html
@@ -208,6 +208,11 @@
                   <strong><a href="https://research.baidu.com/Research_Areas/index-view?id=75">Institute for Quantum Computing</a>, Baidu, Inc.</strong><br>
                   <i>Research intern, advised by Dr. Jingbo Wang</i><br>
                   <i>Mar. 2023 - Sep. 2023</i>
+                </p>
+                <p>
+                  <strong><a href="https://www.iqsqm.com/">International Joint Lab on Quantum Sensing and Quantum Metrology</a>, HUST</strong><br>
+                  <i>Research Assistant, advised by Prof. Jianming Cai</i><br>
+                  <i>Jul. 2021 - Sep. 2021</i>
               </section>
               <hr />
               <section id="awards">
