--- a/index.html
+++ b/index.html
@@ -100,10 +100,13 @@
               </div>
               <br><br>
               <header>
-                <h3><a href="#">About me</a></h3>
+                <h3><a href="#">Huang, Chen</a></h3>
               </header>
               <p>
-                My given name is "晨" (Chen), meaning "morning" in Chinese.
+                <audio controls>
+                  <source src="audio/pronunciation_zh_chen.mp3" type="audio/mpeg">
+                </audio>
+                My given name is "晨" (Chen), meaning "dawn; early morning" in Chinese. Indeed, I am a morning person and enjoy the tranquility of the early hours.
                 Interestingly, "Chen" also sounds like "cheng", which is the Chinese
                 pronunciation for "orange" (橙). Because of this, my friends
                 affectionately call me "橙子" (chengzi, orange) 🍊.
