--- a/index.html
+++ b/index.html
@@ -106,7 +106,10 @@
                 <audio controls>
                   <source src="audio/pronunciation_zh_chen.mp3" type="audio/mpeg">
                 </audio>
-                My given name is "晨" (Chen), meaning "dawn; early morning" in Chinese. Indeed, I am a morning person and enjoy the tranquility of the early hours.
+                My given name is "Chen / 晨" <img src="audio/pronunciation_zh_chen.mp3" 
+                alt="Play" 
+                class="icon fa-headphones" 
+                onclick="document.getElementById('name-audio').play();">, meaning "dawn; early morning" in Chinese. Indeed, I am a morning person and enjoy the tranquility of the early hours.
                 Interestingly, "Chen" also sounds like "cheng", which is the Chinese
                 pronunciation for "orange" (橙). Because of this, my friends
                 affectionately call me "橙子" (chengzi, orange) 🍊.
