--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             <hr class="first" />
             <section>
               <div class="row gtr-50">
-                <a class="image fit"><img src="images/photo.jpg" alt="" /></a>
+                <a class="image centered"><img src="images/photo.jpg" alt="" /></a>
               </div>
               <br><br>
               <header>
@@ -127,15 +127,6 @@
                 Tempus cubilia ultrices tempor sagittis. Nisl fermentum consequat integer interdum.
               </p>
               <div class="row gtr-50">
-                <div class="col-4">
-                  <a href="#" class="image centered"><img src="images/pic10.jpg" alt="" /></a>
-                </div>
-                <div class="col-8">
-                  <h4>Nibh sed cubilia</h4>
-                  <p>
-                    Amet nullam fringilla nibh nulla convallis tique ante proin.
-                  </p>
-                </div>
                 <div class="col-4">
                   <a href="#" class="image fit"><img src="images/pic11.jpg" alt="" /></a>
                 </div>
