--- a/index.html
+++ b/index.html
@@ -103,9 +103,6 @@
                 <h3><a href="#">Huang, Chen</a></h3>
               </header>
               <p>
-                <audio controls>
-                  <source src="audio/pronunciation_zh_chen.mp3" type="audio/mpeg">
-                </audio>
                 My given name is "Chen / 晨" <img src="audio/pronunciation_zh_chen.mp3" 
                 alt="Play" 
                 class="icon fa-headphones" 
@@ -114,6 +111,9 @@
                 pronunciation for "orange" (橙). Because of this, my friends
                 affectionately call me "橙子" (chengzi, orange) 🍊.
               </p>
+              <audio id="name-audio">
+                <source src="audio/pronunciation_zh_chen.mp3" type="audio/mpeg">
+              </audio>
               <footer>
                 <a href="#" class="button">Full CV</a>
               </footer>
