--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             <hr class="first" />
             <section>
               <div class="row gtr-50">
-                <a class="image centered"><img src="images/photo.jpg" alt="" /></a>
+                <a class="image fit"><img src="images/photo.jpg" alt="" /></a>
               </div>
               <br><br>
               <header>
