--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
               </div>
               <br><br>
               <header>
-                <h3><a href="#">Huang, Chen</a></h3>
+                <h3>Huang, Chen</h3>
               </header>
               <p>
                 My given name is "Chen / 晨" <img src="audio/pronunciation_zh_chen.mp3" 
