--- a/index.html
+++ b/index.html
@@ -103,9 +103,7 @@
                 <h3>Huang, Chen</h3>
               </header>
               <p>
-                My given name is "Chen / 晨" <img src="audio/pronunciation_zh_chen.mp3" 
-                alt="Play" 
-                class="icon fa-headphones" 
+                My given name is "Chen / 晨" <img class="icon fa-headphones" 
                 onclick="document.getElementById('name-audio').play();">, meaning "dawn; early morning" in Chinese. Indeed, I am a morning person and enjoy the tranquility of the early hours.
                 Interestingly, "Chen" also sounds like "cheng", which is the Chinese
                 pronunciation for "orange" (橙). Because of this, my friends
