--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
                 <h3>Huang, Chen</h3>
               </header>
               <p>
-                My given name is "Chen / 晨" <img class="icon fa-headphones" 
-                onclick="document.getElementById('name-audio').play();">, meaning "dawn; early morning" in Chinese. Indeed, I am a morning person and enjoy the tranquility of the early hours.
+                My given name is "Chen / 晨" <i class="icon fa-headphones" 
+                onclick="document.getElementById('name-audio').play();"></i>, meaning "dawn; early morning" in Chinese. Indeed, I am a morning person and enjoy the tranquility of the early hours.
                 Interestingly, "Chen" also sounds like "cheng", which is the Chinese
                 pronunciation for "orange" (橙). Because of this, my friends
                 affectionately call me "橙子" (chengzi, orange) 🍊.
