--- a/index.html
+++ b/index.html
@@ -104,10 +104,8 @@
               </header>
               <p>
                 My given name is "Chen / 晨" <i class="fas fa-headphones icon" 
-                onclick="document.getElementById('name-audio').play();"></i>, meaning "dawn; early morning" in Chinese. Indeed, I am a morning person and enjoy the tranquility of the early hours.
-                Interestingly, "Chen" also sounds like "cheng", which is the Chinese
-                pronunciation for "orange" (橙). Because of this, my friends
-                affectionately call me "橙子" (chengzi, orange) 🍊.
+                onclick="document.getElementById('name-audio').play();"></i>, which means "dawn" or "early morning" in Chinese. Fittingly, I am a morning person who cherishes the tranquility of the early hours.
+                Interestingly, the pronunciation of "Chen" is quite similar to "Cheng," which is the Chinese word for "orange / 橙." Because of this playful similarity, my friends often affectionately call me "橙子" 🍊, which means "orange". 
               </p>
               <audio id="name-audio">
                 <source src="audio/pronunciation_zh_chen.mp3" type="audio/mpeg">
