--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                 <h3>Huang, Chen</h3>
               </header>
               <p>
-                My given name is "Chen / 晨" <i class="fas fa-headphones icon" 
+                My given name is "Chen / 晨" <i class="icon fa-headphones" 
                 onclick="document.getElementById('name-audio').play();"></i>, which means "dawn" or "early morning" in Chinese. Fittingly, I am a morning person who cherishes the tranquility of the early hours.
                 Interestingly, the pronunciation of "Chen" is quite similar to "Cheng," which is the Chinese word for "orange / 橙." Because of this playful similarity, my friends often affectionately call me "橙子" 🍊, which means "orange". 
               </p>
