--- a/index.html
+++ b/index.html
@@ -206,6 +206,12 @@
                   <strong><a href="https://www.iqsqm.com/">International Joint Lab on Quantum Sensing and Quantum Metrology</a>, HUST</strong><br>
                   <i>Research Assistant, advised by Prof. Jianming Cai</i><br>
                   <i>Apr. 2019 - Dec. 2022</i>
+                </p>
+                <p>
+                  <strong><a href="https://bradley-lab.weebly.com/"></a>Bradley Lab</strong>, University of Saskatchewan<br>
+                  <i><a href="https://www.mitacs.ca/our-programs/globalink-research-internship-students/">MITACS Globalink Research Internship</a>, advised by Prof. Michael Bradley</i><br>
+                  <i>Apr. 2019 - Dec. 2022</i>
+                </p>
               </section>
               <hr />
               <section id="awards">
