--- a/index.html
+++ b/index.html
@@ -208,9 +208,9 @@
                   <i>Apr. 2019 - Dec. 2022</i>
                 </p>
                 <p>
-                  <strong><a href="https://bradley-lab.weebly.com/"></a>Bradley Lab</strong>, University of Saskatchewan<br>
+                  <strong><a href="https://bradley-lab.weebly.com/"></a>Bradley Lab</strong>, University of Saskatchewan - Saskatoon<br>
                   <i><a href="https://www.mitacs.ca/our-programs/globalink-research-internship-students/">MITACS Globalink Research Internship</a>, advised by Prof. Michael Bradley</i><br>
-                  <i>Apr. 2019 - Dec. 2022</i>
+                  <i>Jun. 2021 - Oct. 2021</i>
                 </p>
               </section>
               <hr />
