--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                   <i>Apr. 2019 - Dec. 2022</i>
                 </p>
                 <p>
-                  <strong><a href="https://bradley-lab.weebly.com/"></a>Bradley Lab</strong>, University of Saskatchewan - Saskatoon<br>
+                  <strong><a href="https://bradley-lab.weebly.com/">Bradley Lab</a>, University of Saskatchewan - Saskatoon</strong><br>
                   <i><a href="https://www.mitacs.ca/our-programs/globalink-research-internship-students/">MITACS Globalink Research Internship</a> (remote), advised by Prof. Michael Bradley</i><br>
                   <i>Jun. 2021 - Oct. 2021</i>
                 </p>
