--- a/index.html
+++ b/index.html
@@ -191,21 +191,34 @@
                   <strong><a href="https://www.imperial.ac.uk/a-z-research/quantum-optics-and-laser-science/">Quantum Optics and Laser Science (QOLS) Group</a></strong>, Imperial College London<br>
                   <i>M.Sc. Student, advised by Dr. John Michniewicz</i><br>
                   <i>Jun. 2024 - Present</i>
+                  <ul>
+                    <li>Charge Noise in Semiconductor Spin Qubits for Quantum Computing</li>
+                  </ul>
                 </p>
                 <p>
                   <strong><a href="http://en.baqis.ac.cn/research/groups/?cid=814">Quantum Operating System Group</a></strong>, Beijing Academy of Quantum Information Sciences (BAQIS)<br>
                   <i>Research Intern (remote), advised by Dr. Jingbo Wang</i><br>
                   <i>May 2024 - Present</i>
+                  <ul>
+                    <li>Rydberg Atom Quantum Computing and Compilation</li>
+                  </ul>
                 </p>
                 <p>
                   <strong><a href="https://research.baidu.com/Research_Areas/index-view?id=75">Institute for Quantum Computing</a></strong>, Baidu, Inc.<br>
                   <i>Research Intern, advised by Dr. Jingbo Wang</i><br>
                   <i>Mar. 2023 - Sep. 2023</i>
+                  <ul>
+                    <li>Automated Calibration of Experimental Parameters in Trapped-Ion Quantum Computer</li>
+                  </ul>
                 </p>
                 <p>
                   <strong><a href="https://www.iqsqm.com/">International Joint Lab on Quantum Sensing and Quantum Metrology</a></strong>, HUST<br>
                   <i>Research Assistant, advised by Prof. Jianming Cai</i><br>
                   <i>Apr. 2019 - Dec. 2022</i>
+                  <ul>
+                    <li>Nanoscale Detection of Ions Using a Spin Quantum Sensor</li>
+                    <li>Measurements of Entangled Qubits</li>
+                  </ul>
                 </p>
                 <p>
                   <strong><a href="https://bradley-lab.weebly.com/">Bradley Lab</a></strong>, University of Saskatchewan - Saskatoon<br>
